playerListing text overflow fix

--- a/client/src/sass/style.scss
+++ b/client/src/sass/style.scss
@@ -4,7 +4,7 @@
 @import "./utilities";
 
 html {
-  font-size: 11px;
+  font-size: 12px;
   @include media-breakpoint-up(sm) {
     font-size: 13px;
   }
